feat: Implement core CRM features including multi-tenant security, CRUD for Annonces and Dossiers, and comprehensive documentation.